--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "version": "thoughtful changelog -o -a && npm run thought",
     "preversion": "npm run thoughtcheck"
   },
-  "dependencies": {},
+  "dependencies": {
+    "mkdirp": "^0.5.1",
+    "rimraf": "^2.5.3"
+  },
   "devDependencies": {
     "ghooks": "^1.0.3",
     "mocha": "^2.3.3",
@@ -49,5 +52,5 @@
       "pre-commit": "standard"
     }
   },
-  "keywords": [  ]
+  "keywords": []
 }
