--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "m-io",
   "version": "0.0.2",
-  "description": "(Incomplete) replacement for `q-io`",
+  "description": "(Incomplete) replacement for q-io",
   "repository": {
     "type": "git",
     "url": "git@github.com:nknapp/m-io.git"
@@ -33,6 +33,8 @@
     "rimraf": "^2.5.3"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "ghooks": "^1.0.3",
     "mocha": "^2.3.3",
     "thoughtful-release": "^0.3.0"
