--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "preversion": "npm run thoughtcheck"
   },
   "dependencies": {
-    "mkdirp": "^0.5.1",
-    "q": "^1.4.1",
-    "rimraf": "^2.5.3"
+    "fs-extra": "^2.0.0",
+    "q": "^1.4.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
